--- a/resources/auto_index.html
+++ b/resources/auto_index.html
@@ -5,7 +5,7 @@
 	<body>
 		<h1>Index Of</h1>
 		<ul>
-			<li>Parent Directory</li>
+			<li><a href="../">Parent Directory</a></li>
 		</ul>
 	</body>
 </html>
