--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img src="media/webserv.svg"></img>
+		<img src="files/webserv.svg"></img>
 		<p>A simple and efficient web server implementation</p>
 	</header>
 
