post binary resolved

--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
 		<a href="/">Home</a>
 		<a href="/manage_files.html">Manage files</a>
 		<a href="/files">Library</a>
-		<a href="/cgi">Services</a>
+		<a href="/service.html">Services</a>
 		<a href="/private">Private</a>
 	</nav>
 
