--- a/website/service.html
+++ b/website/service.html
@@ -27,7 +27,7 @@
 
 		<section class="card">
 			<h2>CGI GET Request</h2>
-			<form action="/cgi" method="get">
+			<form action="/cgi/hello.py" method="get">
 				<input type="text" name="name" placeholder="Enter a name">
 				<button type="submit">Send GET</button>
 			</form>
