--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,7 @@
 		<section>
 			<h1>Welcome to WebServ</h2>
 			<p>This is a demonstration of a web server created for educational purposes.</p>
-			<p>This project aims to create an HTTP web server, with a focus on non-blocking behavior. Dive into the world of network programming and explore the fundamentals of web servers.</p>
+			<p>This project aims to create an HTTP web server in Cpp, with a focus on non-blocking behavior. Dive into the world of network programming and explore the fundamentals of web servers.</p>
 		</section>
 
 		<section>
@@ -102,9 +102,8 @@
 		color: white;
 		text-align: center;
 		padding: 1rem;
-		position: fixed;
-		bottom: 0;
-		width: 100%;
+		margin-top: 2rem;
 	}
+
 </style>
 </html>
