--- a/website/manage_files.html
+++ b/website/manage_files.html
@@ -105,9 +105,7 @@
 		color: white;
 		text-align: center;
 		padding: 1rem;
-		position: fixed;
-		bottom: 0;
-		width: 100%;
+		margin-top: 2rem;
 	}
 
 	.card {
