--- a/resources/request_entity_too_large.html
+++ b/resources/request_entity_too_large.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 		<h1>413 Request Entity Too Large</h1>
-		<p>Processing abandoned due to excessive demand</p>
+		<p>The payload is too large for the server</p>
 	</body>
 </html>
