--- a/website/manage_files.html
+++ b/website/manage_files.html
@@ -12,7 +12,7 @@
 	</header>
 
 	<nav>
-		<a href="/">Home</a>
+		<a href="/index.html">Home</a>
 		<a href="/manage_files.html">Manage files</a>
 		<a href="/files">Library</a>
 		<a href="/service.html">Services</a>
