--- a/website/manage_files.html
+++ b/website/manage_files.html
@@ -105,7 +105,10 @@
 		color: white;
 		text-align: center;
 		padding: 1rem;
-		margin-top: 2rem;
+		position: fixed;
+		left: 0;
+		bottom: 0;
+		width: 100%;
 	}
 
 	.card {
