--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2025 WebServ - By Hadrien Duflos (hduflos), Arnaud Fontan (afontan) & Mathis Peyre Schortzen (mpeyre-s) - No rights reserved</p>
+		<p>&copy; 2025 WebServ - By Hadrien Duflos (hduflos) & Mathis Peyre Schortzen (mpeyre-s) - No rights reserved</p>
 	</footer>
 </body>
 <style>
