--- a/website/manage_files.html
+++ b/website/manage_files.html
@@ -42,7 +42,7 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2025 WebServ - By Hadrien Duflos (hduflos) & Mathis Peyre Schortzen (mpeyre-s) - No rights reserved</p>
+		<p>&copy; 2025 WebServ - By Hadrien Duflos (hduflos), Mathis Peyre Schortzen (mpeyre-s) & Arnaud (afontan) - No rights reserved</p>
 	</footer>
 </body>
 <style>
