--- a/website/service.html
+++ b/website/service.html
@@ -53,7 +53,7 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2025 WebServ - By Hadrien Duflos (hduflos) & Mathis Peyre Schortzen (mpeyre-s) - No rights reserved</p>
+		<p>&copy; 2025 WebServ - By Hadrien Duflos (hduflos), Mathis Peyre Schortzen (mpeyre-s) & Arnaud (afontan) - No rights reserved</p>
 	</footer>
 
 	<style>
